--- a/module-1/lab-tuple-set-dict/your-code/challenge-2.ipynb
+++ b/module-1/lab-tuple-set-dict/your-code/challenge-2.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,27 +38,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 87,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[41, 90, 97, 37, 11, 39, 85, 34, 5, 58, 0, 15, 73, 38, 69, 13, 36, 55, 57, 1, 51, 62, 12, 52, 92, 26, 6, 77, 76, 50, 45, 23, 44, 63, 42, 24, 86, 30, 49, 4, 83, 95, 56, 60, 98, 40, 8, 54, 91, 46, 82, 78, 53, 72, 32, 96, 21, 94, 84, 48, 99, 43, 61, 16, 33, 22, 9, 74, 25, 3, 70, 28, 20, 87, 89, 80, 35, 93, 31, 67]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "sample_list_1 = random.sample(range(0, 101),80)\n",
+    "\n",
+    "print(sample_list_1)\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Convert `sample_list_1` to a set called `set1`. Print the length of the set. Is its length still 80?"
+    "## Convert `sample_list_1` to a set called `set1`. Print the length of the set. Is its length still 80?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "80\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "set1 = set(sample_list_1)\n",
+    "print(len(set1))\n"
    ]
   },
   {
@@ -77,11 +100,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[12, 14, 92, 86, 26, 86, 30, 94, 71, 14, 32, 52, 93, 98, 26, 25, 23, 0, 30, 11, 68, 39, 77, 96, 20, 7, 93, 61, 98, 82, 29, 77, 9, 16, 62, 45, 9, 95, 63, 83, 93, 51, 59, 13, 18, 17, 100, 42, 33, 97, 6, 5, 74, 18, 49, 35, 90, 1, 66, 81, 21, 47, 26, 79, 27, 85, 82, 80, 27, 0, 98, 99, 67, 64, 16, 54, 42, 6, 1, 38]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "sample_list_2 = []\n",
+    "for i in range(80):\n",
+    "    sample_list_2.append(random.randint(0, 101))\n",
+    "\n",
+    "print(sample_list_2)\n"
    ]
   },
   {
@@ -93,11 +128,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "61\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "set2 = set(sample_list_2)\n",
+    "\n",
+    "print(len(set2))"
    ]
   },
   {
@@ -109,11 +154,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{3, 4, 8, 15, 22, 24, 28, 31, 34, 36, 37, 40, 41, 43, 44, 46, 48, 50, 53, 55, 56, 57, 58, 60, 69, 70, 72, 73, 76, 78, 84, 87, 89, 91}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "#set3 = []\n",
+    "#for i in set1:\n",
+    "#    if i not in set2:\n",
+    "#        set3.append(i)\n",
+    "      \n",
+    "#print(set3)\n",
+    "\n",
+    "set3 = set1.difference(set2)\n",
+    "print(set3)"
    ]
   },
   {
@@ -125,11 +186,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[7, 14, 17, 18, 27, 29, 47, 59, 64, 66, 68, 71, 79, 81, 100]\n",
+      "[7, 14, 17, 18, 27, 29, 47, 59, 64, 66, 68, 71, 79, 81, 100]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "set4 = set2.difference(set1)\n",
+    "\n",
+    "print(sorted(set4))\n",
+    "\n",
+    "set4a = []\n",
+    "for i in set2:\n",
+    "    if i not in set1:\n",
+    "        set4a.append(i)\n",
+    "print(set4a)\n",
+    "    "
    ]
   },
   {
@@ -141,11 +220,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 1, 5, 6, 9, 11, 12, 13, 16, 20, 21, 23, 25, 26, 30, 32, 33, 35, 38, 39, 42, 45, 49, 51, 52, 54, 61, 62, 63, 67, 74, 77, 80, 82, 83, 85, 86, 90, 92, 93, 94, 95, 96, 97, 98, 99}\n",
+      "{0, 1, 5, 6, 9, 11, 12, 13, 16, 20, 21, 23, 25, 26, 30, 32, 33, 35, 38, 39, 42, 45, 49, 51, 52, 54, 61, 62, 63, 67, 74, 77, 80, 82, 83, 85, 86, 90, 92, 93, 94, 95, 96, 97, 98, 99}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "set5 = set1.intersection(set2)\n",
+    "\n",
+    "print(set5)\n",
+    "\n",
+    "set5a = []\n",
+    "for i in set1:\n",
+    "    if i in set2:\n",
+    "        set5a.append(i)\n",
+    "set5a = set(set5a)\n",
+    "print(set5a)"
    ]
   },
   {
@@ -165,11 +262,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "a = len(set1)\n",
+    "b = len(set2)\n",
+    "c = len(set3)\n",
+    "d = len(set4)\n",
+    "e = len(set5)\n",
+    "\n",
+    "print(a>b)\n",
+    "print(b>c)\n",
+    "print(c>d)\n",
+    "print(d>e)\n"
    ]
   },
   {
@@ -181,12 +298,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "set6 = set([])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -197,11 +321,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 96,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 1, 3, 4, 5, 6, 8, 9, 11, 12, 13, 15, 16, 20, 21, 22, 23, 24, 25, 26, 28, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 60, 61, 62, 63, 67, 69, 70, 72, 73, 74, 76, 77, 78, 80, 82, 83, 84, 85, 86, 87, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "set6.update(set3)\n",
+    "set6.update(set5)\n",
+    "print(set6)"
    ]
   },
   {
@@ -213,11 +349,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "set1 == set6\n"
    ]
   },
   {
@@ -229,11 +376,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "a = set1.issubset(set2)\n",
+    "b = set1.issubset(set3)"
    ]
   },
   {
@@ -247,11 +395,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "union_1 = set3.union(set4.union(set5))\n",
+    "\n",
+    "union_2 = set1.union(set2)\n",
+    "\n",
+    "union_1 == union_2\n"
    ]
   },
   {
@@ -263,11 +426,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 1, 3, 4, 5, 6, 8, 9, 11, 12, 13, 15, 16, 20, 21, 22, 23, 24, 25, 26, 28, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 60, 61, 62, 63, 67, 69, 70, 72, 73, 74, 76, 77, 78, 80, 82, 83, 84, 85, 86, 87, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99}\n",
+      "0\n",
+      "{1, 3, 4, 5, 6, 8, 9, 11, 12, 13, 15, 16, 20, 21, 22, 23, 24, 25, 26, 28, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 60, 61, 62, 63, 67, 69, 70, 72, 73, 74, 76, 77, 78, 80, 82, 83, 84, 85, 86, 87, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "print(set1)\n",
+    "a = set1.pop()\n",
+    "print(a)\n",
+    "print(set1)"
    ]
   },
   {
@@ -283,12 +459,52 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 3, 4, 5, 6, 8, 9, 11, 12, 13, 15, 16, 20, 21, 22, 23, 24, 25, 26, 28, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 60, 61, 62, 63, 67, 69, 70, 72, 73, 74, 76, 77, 78, 80, 82, 83, 84, 85, 86, 87, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99}\n",
+      "{3, 4, 5, 6, 8, 12, 13, 15, 16, 20, 22, 23, 24, 25, 26, 28, 30, 32, 33, 34, 35, 36, 37, 38, 40, 42, 43, 44, 45, 46, 48, 50, 52, 53, 54, 55, 56, 57, 58, 60, 62, 63, 67, 70, 72, 73, 74, 76, 77, 78, 80, 82, 83, 84, 85, 86, 87, 90, 92, 93, 94, 95, 96, 97, 98}\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_to_remove = [1, 9, 11, 19, 21, 29, 31, 39, 41, 49, 51, 59, 61, 69, 71, 79, 81, 89, 91, 99]\n",
+    "print (set1)\n",
+    "a = set1.difference(list_to_remove)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Your code here\n"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
