--- a/module-1/lab-tuple-set-dict/your-code/challenge-2.ipynb
+++ b/module-1/lab-tuple-set-dict/your-code/challenge-2.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,11 +38,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[16, 23, 40, 78, 11, 44, 4, 20, 99, 62, 25, 92, 76, 21, 15, 64, 61, 67, 74, 14, 88, 94, 59, 81, 86, 46, 96, 3, 91, 31, 6, 89, 8, 26, 68, 45, 80, 77, 0, 58, 87, 69, 7, 13, 65, 47, 82, 28, 43, 52, 1, 12, 72, 42, 79, 54, 39, 22, 73, 49, 38, 2, 36, 57, 24, 63, 27, 35, 5, 50, 30, 37, 95, 33, 93, 85, 70, 75, 66, 60]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "sample_list_1 = random.sample(range(101),80)\n",
+    "\n",
+    "print(sample_list_1)\n",
+    "\n"
    ]
   },
   {
@@ -54,11 +67,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "80\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set1 = set (sample_list_1)\n",
+    "print(len(sample_list_1))"
    ]
   },
   {
@@ -77,11 +100,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[58, 84, 54, 92, 76, 14, 26, 61, 58, 57, 54, 33, 40, 24, 16, 97, 85, 91, 21, 69, 68, 21, 3, 43, 44, 91, 41, 62, 26, 34, 52, 75, 16, 10, 77, 18, 91, 29, 36, 77, 29, 72, 22, 90, 0, 96, 2, 3, 94, 86, 98, 83, 58, 4, 69, 6, 17, 23, 3, 61, 49, 73, 9, 62, 64, 16, 64, 73, 14, 58, 26, 75, 33, 15, 9, 21, 72, 58, 55, 46]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "sample_list_2 = []\n",
+    "\n",
+    "for i in range(80):\n",
+    "    sample_list_2.append(random.randint(0, 100))\n",
+    "\n",
+    "print(sample_list_2)"
    ]
   },
   {
@@ -93,11 +131,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "53\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set2= set(sample_list_2)\n",
+    "\n",
+    "print(len(set2))"
    ]
   },
   {
@@ -109,11 +158,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 5, 7, 8, 11, 12, 13, 20, 25, 27, 28, 30, 31, 35, 37, 38, 39, 42, 45, 47, 50, 59, 60, 63, 65, 66, 67, 70, 74, 78, 79, 80, 81, 82, 87, 88, 89, 93, 95, 99}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "set3= set1.difference(set2)\n",
+    "\n",
+    "print(set3)\n",
+    "\n"
    ]
   },
   {
@@ -125,11 +187,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{97, 34, 98, 9, 10, 41, 17, 18, 83, 84, 55, 90, 29}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "set4=set2.difference(set1)\n",
+    "\n",
+    "print(set4)"
    ]
   },
   {
@@ -141,11 +215,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 2, 3, 4, 6, 14, 15, 16, 21, 22, 23, 24, 26, 33, 36, 40, 43, 44, 46, 49, 52, 54, 57, 58, 61, 62, 64, 68, 69, 72, 73, 75, 76, 77, 85, 86, 91, 92, 94, 96}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "set5= set1.intersection(set2)\n",
+    "\n",
+    "print(set5)\n"
    ]
   },
   {
@@ -165,11 +251,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "print (len(set1)>len(set2))\n",
+    "print (len(set5)<len(set1))\n",
+    "print (len(set3)>len(set4))"
    ]
   },
   {
@@ -181,11 +280,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "set()\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "set6 = set()\n",
+    "\n",
+    "print(set6)"
    ]
   },
   {
@@ -197,11 +308,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 1, 2, 3, 4, 5, 6, 7, 8, 11, 12, 13, 14, 15, 16, 20, 21, 22, 23, 24, 25, 26, 27, 28, 30, 31, 33, 35, 36, 37, 38, 39, 40, 42, 43, 44, 45, 46, 47, 49, 50, 52, 54, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 85, 86, 87, 88, 89, 91, 92, 93, 94, 95, 96, 99}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "set6.update(set3)\n",
+    "set6.update(set5)\n",
+    "\n",
+    "print(set6)"
    ]
   },
   {
@@ -213,11 +337,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "\n",
+    "print(set1 == set6)"
    ]
   },
   {
@@ -229,11 +364,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "print(set2.issubset(set1))\n",
+    "\n",
+    "print(set3.issubset(set1))\n",
+    "\n"
    ]
   },
   {
@@ -247,11 +396,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "z= set3.union(set4.union(set5))\n",
+    "\n",
+    "u = set1.union(set2)\n",
+    "\n",
+    "print(z==u)"
    ]
   },
   {
@@ -263,11 +426,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{6, 7, 8, 11, 12, 13, 14, 15, 16, 20, 21, 22, 23, 24, 25, 26, 27, 28, 30, 31, 33, 35, 36, 37, 38, 39, 40, 42, 43, 44, 45, 46, 47, 49, 50, 52, 54, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 85, 86, 87, 88, 89, 91, 92, 93, 94, 95, 96, 99}\n",
+      "{7, 8, 11, 12, 13, 14, 15, 16, 20, 21, 22, 23, 24, 25, 26, 27, 28, 30, 31, 33, 35, 36, 37, 38, 39, 40, 42, 43, 44, 45, 46, 47, 49, 50, 52, 54, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 85, 86, 87, 88, 89, 91, 92, 93, 94, 95, 96, 99}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "print(set1)\n",
+    "set1.pop()\n",
+    "print(set1)"
    ]
   },
   {
@@ -283,12 +458,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{7, 8, 11, 12, 13, 14, 15, 16, 20, 21, 22, 23, 24, 25, 26, 27, 28, 30, 31, 33, 35, 36, 37, 38, 39, 40, 42, 43, 44, 45, 46, 47, 49, 50, 52, 54, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 85, 86, 87, 88, 89, 91, 92, 93, 94, 95, 96, 99}\n",
+      "{7, 8, 12, 13, 14, 15, 16, 20, 22, 23, 24, 25, 26, 27, 28, 30, 33, 35, 36, 37, 38, 40, 42, 43, 44, 45, 46, 47, 50, 52, 54, 57, 58, 60, 62, 63, 64, 65, 66, 67, 68, 70, 72, 73, 74, 75, 76, 77, 78, 80, 82, 85, 86, 87, 88, 92, 93, 94, 95, 96}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Your code here\n",
+    "\n",
+    "list_to_remove = set([1, 9, 11, 19, 21, 29, 31, 39, 41, 49, 51, 59, 61, 69, 71, 79, 81, 89, 91, 99])\n",
+    "\n",
+    "lista_set_1=set1\n",
+    "\n",
+    "print(lista_set_1)\n",
+    "\n",
+    "lista_nueva=lista_set_1.difference(list_to_remove)\n",
+    "\n",
+    "print(lista_nueva)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Your code here\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -307,7 +508,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
